# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: empty.cpp
common/include/: kale_error.h  match.h  nonnull.h
compiler/ast/: CMakeLists.txt  ast.cpp  ast_node.cpp  ast_parser.cpp  declaration.cpp
compiler/ast/include/: ast.h  ast_node.h  ast_parser.h  bin_op.h  declaration.h  top_level.h
compiler/codegen/: CMakeLists.txt  file_context.cpp  function_context.cpp
compiler/codegen/include/: file_context.h  function_context.h  handle.h
compiler/lexer/: CMakeLists.txt  cursor.cpp  string_reader.cpp
compiler/lexer/include/: arith_op.h  cursor.h  string_reader.h  token.h
compiler/parsers/: CMakeLists.txt  ast_parser.cpp  file_parser.cpp
compiler/parsers/include/: ast_parser.h  file_parser.h
tests/: ast_test.cpp  codegen_test.cpp  lexer_test.cpp
